[project]
name = "distributed-llm-inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Wiratmika",email = "wmika@uw.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "httpx (>=0.28.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
